--- a/public/css/header.css
+++ b/public/css/header.css
@@ -25,6 +25,7 @@ header {
 
     position: absolute;
     z-index: 1001;
+    top: 0;
     display: none;
 }
 
